# DNX-Note-Width-Changer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  version.h
.github/workflows/: build.yml  msvc.yml
Chartstore/: CMakeLists.txt  chart_store.cpp
Dynamix chart width control/: Dynamix chart width control.sln  Dynamix chart width control.vcxproj  Dynamix chart width control.vcxproj.filters  Makefile  chart_store.cpp  chart_store.h  main.cpp  width.cpp  width_change.h
Dynamix chart width control GUI/: CMakeLists.txt  CMakeSettings.json  DNX_widthGUI.pro  DNX_widthGUI.vcxproj  DNX_widthGUI.vcxproj.filters  DNX_widthGUI_en_en.qm  DNX_widthGUI_en_en.ts  DNX_widthGUI_resource.rc  DNX_widthGUI_zh_CN.qm  DNX_widthGUI_zh_CN.ts  Dynamix chart width control GUI.vcxproj  Dynamix chart width control GUI.vcxproj.filters  chart_store.cpp  chart_store.h  main.cpp  mainGUI.cpp  mainGUI.h  mainGUI.qrc  mainGUI.ui  msvc_make.bat  resources.rc
Dynamix chart width control GUI(qmake)/: DNX_widthGUI.sln  DNX_widthGUI.vcxproj  DNX_widthGUI.vcxproj.filters  DNX_widthGUI_en_en.qm  DNX_widthGUI_en_en.ts  DNX_widthGUI_zh_CN.qm  DNX_widthGUI_zh_CN.ts  chart_store.cpp  main.cpp
Dynamix chart width control/Debug/: Dynamix chart width control.exe.recipe  Dynamix chart width control.ilk  Dynamix chart width control.vcxproj.FileListAbsolute.txt  vc142.idb
Dynamix chart width control/Debug/Dynamix .fe6ed36d.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Dynamix chart width control.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Dynamix chart width control/x64/Release/: Dynamix chart width control.exe.recipe  Dynamix chart width control.iobj  Dynamix chart width control.ipdb  Dynamix chart width control.vcxproj.FileListAbsolute.txt
Dynamix chart width control/x64/Release/Dynamix .fe6ed36d.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Dynamix chart width control.lastbuildstate  Dynamix chart width control.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Dynamix_chart_width_control/: CMakeLists.txt  Dynamix chart width control.sln  Dynamix chart width control.vcxproj  Dynamix chart width control.vcxproj.filters  chart_store.cpp  chart_store.h  defs.h  main.cpp  width.cpp  width_change.h
Dynamix_chart_width_control_GUI/: CMakeLists.txt  CMakeSettings.json  DNX_widthGUI_en_en.qm  DNX_widthGUI_en_en.ts  DNX_widthGUI_zh_CN.qm  DNX_widthGUI_zh_CN.ts  chart_store.cpp  chart_store.h  defs.h  hintdlg.cpp  hintdlg.h  mainGUI.h  maingui.cpp  maingui.h  maingui.qrc  maingui.ui  qdefs.h  width_change.cpp
Dynamix_chart_width_control_GUI(qmake)/: DNX_widthGUI.pro  DNX_widthGUI.vcxproj  DNX_widthGUI_en_en.qm  DNX_widthGUI_en_en.ts  DNX_widthGUI_zh_CN.ts  chart_store.cpp  chart_store.h  mainGUI.qrc  maingui.cpp  maingui.ui  resource.h
include/: chart_store.h  defs.h  version.h
